--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
+amqp==2.2.2
+anyjson==0.3.3
 Babel==2.5.3
+billiard==3.5.0.3
+celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
 Django==2.0.1
+django-celery==3.2.2
+django-celery-results==1.0.1
 django-countries==5.0
 django-hstore==1.4.2
 django-localflavor==2.0
 django-localflavor-us==1.1
 django-phonenumber-field==2.0.0
+idna==2.6
 jsonfield==2.0.2
+kombu==4.1.0
 pep8==1.7.1
 phonenumberslite==8.8.10
 psycopg2==2.7.3.2
 pytz==2017.3
+requests==2.18.4
+simplejson==3.15.0
+urllib3==1.22
+vine==1.1.4
